--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,8 +30,9 @@
       BootStrap 5
     -->
 
-    <!--Font Awesome Trebolkit-->
-
+    <!--MUI icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    
     <title>Chacinados El Trebol</title>
   </head>
   <body>
