--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class='app'>
+        <section id='cart'></section>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
